--- a/.github/workflows/multijobs.yml
+++ b/.github/workflows/multijobs.yml
@@ -16,7 +16,7 @@ jobs:
               run: cowsay -f dragon "Run for cover, iam a Dragon....RAWR" >> dragon.txt
 
             - name: upload artifact
-              uses: action/upload-artifact@v3
+              uses: actions/upload-artifact@v3
               with:
 
                 name: dragon-file
