--- a/.github/workflows/diff.yml
+++ b/.github/workflows/diff.yml
@@ -1,1 +1,35 @@
-name: 
+name: multi jobs
+
+on: push
+
+jobs:
+    build_job1:
+        runs-on: ubuntu-latest 
+        steps:
+            - name: checkout repo
+              uses: actions/checkout@v4.1.7
+
+            - name: install cowsay CMD
+              run: sudo apt-get install cowsay -y
+
+            - name: Execute cowsay CMD
+              run: cowsay -f dragon "Run for cover, iam a Dragon....RAWR" >> dragon.txt
+
+            - name: upload artifact
+              uses: actions/upload-artifact@v3
+              with:
+                name: dragon-file
+                path: dragon.txt
+
+    test_job2:
+        runs-on: ubuntu-latest
+        needs: build_job1
+        steps:
+            - name: download artifact
+              uses: actions/upload-artifact@v3
+              with:
+                name: dragon-file
+
+            - name: Test File Exists
+              run: grep -i "dragon" dragon.txt  
+
