--- a/.github/workflows/diff.yml
+++ b/.github/workflows/diff.yml
@@ -26,7 +26,7 @@ jobs:
         needs: build_job1
         steps:
             - name: download artifact
-              uses: actions/upload-artifact@v3
+              uses: actions/download-artifact@v3
               with:
                 name: dragon-file
 
